--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,4 @@ org.gradle.daemon = false
 systemProp.stapler.trace = false
 systemProp.stapler.jelly.noCache = false
 systemProp.debug.YUI = false
+systemProp.jenkins.install.runSetupWizard = false
