--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,8 @@ dependencies {
     compile "com.sun.mail:javax.mail:1.5.1"
 
     // Useful for interrogating the injected environment variables...
-    // jenkinsTest 'org.jenkins-ci.plugins:envinject:1.92.1@jar'
+//    jenkinsPlugins 'org.jenkins-ci.plugins:envinject:1.92.1@jar'
+//    jenkinsPlugins 'org.jenkins-ci.plugins:matrix-project:1.7.1@jar'
 
     testCompile('org.hamcrest:hamcrest-core:1.3') { force = true }
     testCompile('junit:junit:4.12') { force = true }
@@ -103,24 +104,5 @@ configurations.runtime {
         force 'org.springframework:spring-beans:2.5.6.SEC03'
         force 'org.springframework:spring-context:2.5.6.SEC03'
         force 'commons-fileupload:commons-fileupload:1.3.1-jenkins-1'
-        // 2.7.1 LTS
-//        force 'org.jenkins-ci.main:jenkins-core:2.7.1'
-//        force 'org.jenkins-ci.main:remoting:2.59'
-//        force 'org.apache.ant:ant:1.8.4'
-//        force 'javax.mail:mail:1.4.4'
-//        force 'org.slf4j:slf4j-api:1.7.7'
-//        force 'commons-httpclient:commons-httpclient:3.1'
-//        force 'org.apache.maven:maven-embedder:3.0.4'
-//        force 'org.sonatype.sisu:sisu-inject-plexus:2.3.0'
-//        force 'org.apache.maven:maven-core:3.0.4'
-//        force 'org.apache.maven:maven-aether-provider:3.0.4'
-//        force 'org.codehaus.plexus:plexus-classworlds:2.4'
-//        force 'org.apache.maven.wagon:wagon-provider-api:2.2'
-//        force 'org.codehaus.plexus:plexus-utils:3.0'
-//        force 'org.apache.maven:maven-artifact:3.0.4'
-//        force 'org.apache.maven:maven-compat:3.0.4'
-//        force 'org.sonatype.aether:aether-connector-wagon:1.13.1'
-//        force 'xalan:xalan:2.7.1'
-//        force 'org.sonatype.plexus:plexus-cipher:1.7'
     }
 }
